# token-monitor

./: FEATURE-IDEAS.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: main.test.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
